bat.bool1.posneg.PosNeg.scala.error
Erreur de compilation :
PosNeg:3: error: ';' expected but 'true' found.
    if( (a>=0) && (b<0))  {retur true}
                                 ^